# FindriveCRM

./: .dockerignore  .gitignore  .ruffignore  Dockerfile  Makefile  README.Docker.md  README.Makefile.md  README.md  deploy.sh  docker-compose.yml  docker-entrypoint.sh  fix-env.sh  init-letsencrypt.sh  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  reset-db.sh  setup-server.sh  sync-env.sh  vite.config.ts
core/: admin.py  analitics.py  celery.py  constants.py  consumers.py  forms.py  mixins.py  models.py  routing.py  services.py  tasks.py  urls.py  views.py
core/celery_cfg/: celery.py
core/management/commands/: calc_planed_service.py
core/migrations/: 0001_initial.py  0002_add_outlay_name_and_comment.py  0002_alter_car_owner.py  0002_alter_outlayamount_price_per_item.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_alter_outlayamount_item_count.py  0003_make_outlay_name_optional.py  0003_user_is_staff.py  0004_remove_category_default.py  0004_user_is_superuser.py  0005_add_service_ordering.py  0005_alter_user_is_active.py  0006_add_owner_ordering.py  0006_car_statuse.py  0007_update_car_choices.py  0007_user_groups_user_user_permissions.py  0008_alter_car_drive_type.py  0008_car_license_plate.py  0009_alter_car_statuse.py  0009_chat_message_messageimage.py  0009_notificationservice_serviceeventschema_and_more.py  0010_alter_chat_tg_chat_id.py  0010_carservicestate_mileage.py  0010_rename_statuse_car_status.py  0011_increase_phone_max_length.py  0011_message_contain_file.py  0011_remove_invoice_expense_and_more.py  0012_alter_car_drive_type.py  0012_alter_message_tg_message_id.py  0012_remove_serviceevent_comment_serviceevent_interval_km_and_more.py  0013_alter_invoice_options_alter_invoice_invoice_amount_and_more.py  0013_alter_message_tg_message_id.py  0013_remove_service_is_social_media_carphoto.py  0014_alter_chat_tg_chat_id_alter_message_tg_message_id.py  0014_increase_item_name_length.py  0014_notifications_remove_service_is_social_media_and_more.py  0015_alter_chat_user_last.py  0016_remove_message_read_at.py  0017_rename_text_message_message.py  0018_remove_message_tg_message_id.py
core/static/css/: account.css  style.css
core/templates/: base.html  dashboard.html  index.html  outlay.html  outlay_detail.html  outlay_detail_view.html
findrive_crm/: __init__.py  asgi.py  logging.py  settings.py  urls.py  wsgi.py
nginx/conf.d/: findrive.conf
src/: App.tsx  index.css
src/components/: AIAssistant.tsx  AddOwner.tsx  AddVehicle.tsx  EditExpense.tsx  InvoiceList.tsx  Notifications.tsx  OwnerChat.tsx  OwnerList.tsx  ReportCreate.tsx  SavedVehicles.tsx  ServiceDetails.tsx  ServiceList.tsx  VehicleDetails.tsx  VehicleList.tsx
src/types/: index.ts
src/utils/: mockData.ts
staticfiles/css/: style.css
(+40 files in other folders)
