[tool.poetry]
name = "findrive-project"
version = "0.1.0"
description = ""
authors = ["Maksym Potapchuk <maksym.potapchuk.hp@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
django = "^6.0"
python-dotenv = "^1.2.1"
psycopg2-binary = "^2.9.11"
pillow = "^12.0.0"
django-allauth = "^65.13.1"
django-tailwind = "^4.4.2"
django-browser-reload = "^1.21.0"
django-widget-tweaks = "^1.5.0"
django-filter = "^25.2"
pandas = "^2.3.3"
tabula-py = "2.10.0"
pymupdf = "^1.26.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    # Frontend files (not used in Django project)
    "src",
    "vite.config.ts",
    "package.json",
    "package-lock.json",
    "index.html",
    "theme/static/react",
    "dist",
    "build",
    ".cache",
    ".vite",
    "node_modules",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.lint.isort]
known-first-party = ["core", "findrive_crm"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG", "S101"]
"migrations/*" = ["F401", "F403"]

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 12
max-returns = 6
max-statements = 50

[dependency-groups]
dev = [
    "ruff (>=0.14.9,<0.15.0)"
]
